force-app/main/default/objects/Assessment__c/fields/This_child_s_is_or_will_be_protected__c.field-meta.xml
<CustomField>
    <fullName>This_child_s_is_or_will_be_protected__c</fullName>
    <description>This child&apos;s is or will be protected from visits/visitation placing the child in immediate danger</description>
    <label>This child&apos;s is or will be protected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>