force-app/main/default/objects/Assessment__c/fields/This_child_s_sleeping_arrangements__c.field-meta.xml
<CustomField>
    <fullName>This_child_s_sleeping_arrangements__c</fullName>
    <description>This child&apos;s sleeping arrangements have been observed by caseworker and are appropriate</description>
    <label>This child&apos;s sleeping arrangements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>