force-app/main/default/objects/Assessment__c/fields/When_Circumstances_Suggest_That_the_Chil__c.field-meta.xml
<CustomField>
    <fullName>When_Circumstances_Suggest_That_the_Chil__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Circumstances Suggest That the Child&apos;s/Youth&apos;s Safety May be Jeopardized.</description>
    <label>When Circumstances Suggest That the Chil</label>
    <type>Checkbox</type>
</CustomField>